--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h2>API BREIF</h2>
         <input type="text" id="text" placeholder="User name repo">
         <button type="submit" id="submit">Search</button>
-        <p id="p"></p>
+        <div class="root" id="root">
+        </div>
     </form>
 </body>
 </html>
