--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
-
+<header>
+    <div class="container">
+        <h2>Search user</h2>
+    </div>
+</header>
 <body>
     <form>
-        <h2>API BREIF</h2>
         <input type="text" id="text" placeholder="User name repo">
         <button type="submit" id="submit">Search</button>
-        <div class="root" id="root">
-        </div>
     </form>
+    <div class="root" id="root"></div>
 </body>
 </html>
 <script src="./script.js"></script>
